styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Trispace&display=swap');
* {
    margin: 0;
    padding: 0;
    text-decoration: none;
    font-family: "Montserrat";
    color: gray;
}

html, body {
    min-height: 100%;
    max-width: 100%;
    overflow-x: hidden;
}
body {
    background-color: lightgray;
    
}
p {
    margin: 16px auto;
    line-height: 1.5em;
}



/*layout and navigation*/

.layout {
    max-width: 100%;
    margin: 0 auto;
    padding-left: 20px;
    padding-right: 20px;
}
.site {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    align-items: center;
}
/*
nav {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin: 20px auto;
    align-items:center;
}
nav .logo {
    color: crimson;
}
nav .links {
    display: inline-block;
    text-align: right;
}
nav a {
    display: inline-block;
    margin-left: 60px;
    font-weight: 400;
    border-bottom: 3px solid transparent;
}
nav a:hover {
    border-color: white;
}*/
.content {
    flex-grow: 1;
}
footer {
    text-align: center;
    color: olive;
    margin: 20px auto;
    
}

